# A_maze_ing42

./: .gitignore  Makefile  README.md  a_maze_ing.py  cell.py  config.py  config.txt  generator.py  gitignore  maze.py  maze.txt  mazegen.py  mlx.py  mlx_display.py  parser-conf.py  parser_conf.py  solver.py  test.py  writer.py
mazegen/: __init__.py  generator.py  maze.py  pyproject.toml  solver.py
